@@ -1,246 +1,435 @@
-// NAME
-//      $RCSfile: InfoElement.java,v $
-// DESCRIPTION
-//      [given below in javadoc format]
-// DELTA
-//      $Revision$
-// CREATED
-//      $Date$
-// COPYRIGHT
-//      Mexuar Technologies Ltd
-// TO DO
-//
+
 package org.asteriskjava.iax.protocol;
 
-import java.util.*;
 
-import org.asteriskjava.iax.util.*;
+import org.asteriskjava.iax.util.ByteBuffer;
+
+import java.util.Enumeration;
+import java.util.Hashtable;
 
 /**
  * Represents the info elements
- *
- * @author <a href="mailto:thp@westhawk.co.uk">Tim Panton</a>
- * @version $Revision$ $Date$
  */
 public class InfoElement {
-    private final static String version_id =
-            "@(#)$Id$ Copyright Mexuar Technologies Ltd";
 
-    /** 0x01 Number/extension being called */
+    /**
+     * 0x01 Number/extension being called
+     */
     final static int CALLEDNO = 1;
-    /** 0x02 Calling Number String */
+    /**
+     * 0x02 Calling Number String
+     */
     final static int CALLINGNO = 2;
-    /** 0x03 Calling number ANI for billing */
+    /**
+     * 0x03 Calling number ANI for billing
+     */
     final static int CALLINGANI = 3;
-    /** 0x04 Name of caller */
+    /**
+     * 0x04 Name of caller
+     */
     final static int CALLINGNAME = 4;
-    /** 0x05 Context for number*/
+    /**
+     * 0x05 Context for number
+     */
     final static int CALLEDCTX = 5;
-    /** 0x06 Username (peer or user) for authentication */
+    /**
+     * 0x06 Username (peer or user) for authentication
+     */
     final static int USERNAME = 6;
-    /** 0x07 Password for authentication */
+    /**
+     * 0x07 Password for authentication
+     */
     final static int PASSWORD = 7;
-    /** 0x08 Actual codec capability 32-bit unsigned integer */
+    /**
+     * 0x08 Actual codec capability 32-bit unsigned integer
+     */
     final static int CAPABILITY = 8;
-    /** 0x09 Desired codec format 32-bit unsigned integer */
+    /**
+     * 0x09 Desired codec format 32-bit unsigned integer
+     */
     final static int FORMAT = 9;
-    /** 0x0a Desired language String */
+    /**
+     * 0x0a Desired language String
+     */
     final static int LANGUAGE = 10;
-    /** 0x0b Protocol version 16-bit unsigned integer */
+    /**
+     * 0x0b Protocol version 16-bit unsigned integer
+     */
     final static int VERSION = 11;
-    /** 0x0c ADSI CPE Capability 16-bit unsigned integer */
+    /**
+     * 0x0c ADSI CPE Capability 16-bit unsigned integer
+     */
     final static int ADSICPE = 12;
-    /** 0x0d DNID (Originally dialed DNID - deprecated) */
+    /**
+     * 0x0d DNID (Originally dialed DNID - deprecated)
+     */
     final static int DNID = 13;
-    /** 0x0e Authentication method(s) 16-bit unsigned integer */
+    /**
+     * 0x0e Authentication method(s) 16-bit unsigned integer
+     */
     final static int AUTHMETHODS = 14;
-    /** 0x0f Challenge String for MD5/RSA */
+    /**
+     * 0x0f Challenge String for MD5/RSA
+     */
     final static int CHALLENGE = 15;
-    /** 0x10 MD5 Result String */
+    /**
+     * 0x10 MD5 Result String
+     */
     final static int MD5RESULT = 16;
-    /** 0x11 RSA Result String */
+    /**
+     * 0x11 RSA Result String
+     */
     final static int RSARESULT = 17;
-    /** 0x12 Apparent Address of peer */
+    /**
+     * 0x12 Apparent Address of peer
+     */
     final static int AAA = 18;
-    /** 0x13 When to refresh registration interval 16-bit unsigned integer */
+    /**
+     * 0x13 When to refresh registration interval 16-bit unsigned integer
+     */
     final static int REFRESH = 19;
-    /** 0x14 Dialplan Entry Status 16-bit unsigned integer */
+    /**
+     * 0x14 Dialplan Entry Status 16-bit unsigned integer
+     */
     final static int DPE = 20;
-    /** 0x15 Call Number of peer 16-bit unsigned integer */
+    /**
+     * 0x15 Call Number of peer 16-bit unsigned integer
+     */
     final static int CALLNO = 21;
-    /** 0x16 Cause String */
+    /**
+     * 0x16 Cause String
+     */
     final static int CAUSE = 22;
-    /** 0x17 IAX Unknown 8-bit unsigned integer */
+    /**
+     * 0x17 IAX Unknown 8-bit unsigned integer
+     */
     final static int IAXUNKNOWN = 23;
-    /** 0x18 Messages Waiting 16-bit unsigned integer */
+    /**
+     * 0x18 Messages Waiting 16-bit unsigned integer
+     */
     final static int MSGCOUNT = 24;
-    /** 0x19 Request Auto-Answer */
+    /**
+     * 0x19 Request Auto-Answer
+     */
     final static int AUTOANS = 25;
-    /** 0x1a Request Music-on-Hold with QUELCH String (optional) */
+    /**
+     * 0x1a Request Music-on-Hold with QUELCH String (optional)
+     */
     final static int MOH = 26;
-    /** 0x1b Transfer Identifier 32-bit unsigned integer */
+    /**
+     * 0x1b Transfer Identifier 32-bit unsigned integer
+     */
     final static int TRANSINDIC = 27;
-    /** 0x1c Referring DNIS String */
+    /**
+     * 0x1c Referring DNIS String
+     */
     final static int RDNIS = 28;
-    /** 0x1d Provisioning info raw */
+    /**
+     * 0x1d Provisioning info raw
+     */
     final static int PROVISIONING = 29;
-    /** 0x1e AES Provisioning info raw */
+    /**
+     * 0x1e AES Provisioning info raw
+     */
     final static int AESPROVISIONING = 30;
-    /** 0x1f Date/Time u32 */
+    /**
+     * 0x1f Date/Time u32
+     */
     final static int DATETIME = 31;
-    /** 0x20 Device Type - string */
+    /**
+     * 0x20 Device Type - string
+     */
     final static int DEVICETYPE = 32;
-    /** 0x21 Service Identifier - string */
+    /**
+     * 0x21 Service Identifier - string
+     */
     final static int SERVICEIDENT = 33;
-    /** 0x22 Firmware revision - u16 */
+    /**
+     * 0x22 Firmware revision - u16
+     */
     final static int FIRMWAREVER = 34;
-    /** 0x23 Firmware block description - u32 */
+    /**
+     * 0x23 Firmware block description - u32
+     */
     final static int FWBLOCKDESC = 35;
-    /** 0x24 Firmware block of data - raw */
+    /**
+     * 0x24 Firmware block of data - raw
+     */
     final static int FWBLOCKDATA = 36;
-    /** 0x25 Provisioning Version (u32) */
+    /**
+     * 0x25 Provisioning Version (u32)
+     */
     final static int PROVVER = 37;
-    /** 0x26 Calling presentation (u8) */
+    /**
+     * 0x26 Calling presentation (u8)
+     */
     final static int CALLINGPRES = 38;
-    /** 0x27 Calling type of number (u8) */
+    /**
+     * 0x27 Calling type of number (u8)
+     */
     final static int CALLINGTON = 39;
-    /** 0x28 Calling transit network select (u16) */
+    /**
+     * 0x28 Calling transit network select (u16)
+     */
     final static int CALLINGTNS = 40;
-    /** 0x29 Supported sampling rates (u16) */
+    /**
+     * 0x29 Supported sampling rates (u16)
+     */
     final static int SAMPLINGRATE = 41;
-    /** 0x2a Hangup cause (u8) */
+    /**
+     * 0x2a Hangup cause (u8)
+     */
     final static int CAUSECODE = 42;
-    /** 0x2b Encryption format (u16) */
+    /**
+     * 0x2b Encryption format (u16)
+     */
     final static int ENCRYPTION = 43;
-    /** 0x2c 128-bit AES Encryption key (raw) */
+    /**
+     * 0x2c 128-bit AES Encryption key (raw)
+     */
     final static int ENCKEY = 44;
-    /** 0x2d Codec Negotiation raw */
+    /**
+     * 0x2d Codec Negotiation raw
+     */
     final static int CODEC_PREFS = 45;
-    /** 0x2e Received jitter (as in RFC1889) u32 */
+    /**
+     * 0x2e Received jitter (as in RFC1889) u32
+     */
     final static int RR_JITTER = 46;
-    /** 0x2f Received loss (high byte loss pct, low 24 bits loss count, as in rfc1889 u32 */
+    /**
+     * 0x2f Received loss (high byte loss pct, low 24 bits loss count, as in rfc1889 u32
+     */
     final static int RR_LOSS = 47;
-    /** 0x30 Received frames (total frames received) u32 */
+    /**
+     * 0x30 Received frames (total frames received) u32
+     */
     final static int RR_PKTS = 48;
-    /** 0x31 Max playout delay for received frames (in ms) u16 */
+    /**
+     * 0x31 Max playout delay for received frames (in ms) u16
+     */
     final static int RR_DELAY = 49;
-    /** 0x32 Dropped frames (presumably by jitterbuf) u32 */
+    /**
+     * 0x32 Dropped frames (presumably by jitterbuf) u32
+     */
     final static int RR_DROPPED = 50;
-    /** 0x33 Frames received Out of Order u32 */
+    /**
+     * 0x33 Frames received Out of Order u32
+     */
     final static int RR_OOO = 51;
     final static int IAXVARS = 52; // todo - fix
+    final static int CALLTOKEN = 54;
 
-
-    /** 0x01 Number/extension being called */
+    /**
+     * 0x01 Number/extension being called
+     */
     String calledNo;
-    /** 0x02 Calling Number String */
+    /**
+     * 0x02 Calling Number String
+     */
     String callingNo;
-    /** 0x03 Calling number ANI for billing */
+    /**
+     * 0x03 Calling number ANI for billing
+     */
     String callingANI;
-    /** 0x04 Name of caller */
+    /**
+     * 0x04 Name of caller
+     */
     String callingName;
-    /** 0x05 Context for number*/
+    /**
+     * 0x05 Context for number
+     */
     String calledCtx;
-    /** 0x06 Username (peer or user) for authentication */
+    /**
+     * 0x06 Username (peer or user) for authentication
+     */
     String username;
-    /** 0x07 Password for authentication */
+    /**
+     * 0x07 Password for authentication
+     */
     String password;
-    /** 0x08 Actual codec capability 32-bit unsigned integer */
+    /**
+     * 0x08 Actual codec capability 32-bit unsigned integer
+     */
     Integer capability;
-    /** 0x09 Desired codec format 32-bit unsigned integer */
+    /**
+     * 0x09 Desired codec format 32-bit unsigned integer
+     */
     Integer format;
-    /** 0x0a Desired language String */
+    /**
+     * 0x0a Desired language String
+     */
     String language;
-    /** 0x0b Protocol version 16-bit unsigned integer */
+    /**
+     * 0x0b Protocol version 16-bit unsigned integer
+     */
     Integer version;
-    /** 0x0c ADSI CPE Capability 16-bit unsigned integer */
+    /**
+     * 0x0c ADSI CPE Capability 16-bit unsigned integer
+     */
     Integer adsiCpe;
-    /** 0x0d DNID (Originally dialed DNID - deprecated) */
+    /**
+     * 0x0d DNID (Originally dialed DNID - deprecated)
+     */
     String dnid;
-    /** 0x0e Authentication method(s) 16-bit unsigned integer */
+    /**
+     * 0x0e Authentication method(s) 16-bit unsigned integer
+     */
     Integer authmethods;
-    /** 0x0f Challenge String for MD5/RSA */
+    /**
+     * 0x0f Challenge String for MD5/RSA
+     */
     String challenge;
-    /** 0x10 MD5 Result String */
+    /**
+     * 0x10 MD5 Result String
+     */
     String md5Result;
-    /** 0x11 RSA Result String */
+    /**
+     * 0x11 RSA Result String
+     */
     String rsaResult;
-    /** 0x12 Apparent Address of peer */
+    /**
+     * 0x12 Apparent Address of peer
+     */
     byte[] aaa;
-    /** 0x13 When to refresh registration interval 16-bit unsigned integer */
+    /**
+     * 0x13 When to refresh registration interval 16-bit unsigned integer
+     */
     Integer refresh;
-    /** 0x14 Dialplan Entry Status 16-bit unsigned integer */
+    /**
+     * 0x14 Dialplan Entry Status 16-bit unsigned integer
+     */
     Integer dpe;
-    /** 0x15 Call Number of peer 16-bit unsigned integer */
+    /**
+     * 0x15 Call Number of peer 16-bit unsigned integer
+     */
     Integer callNo;
-    /** 0x16 Cause String */
+    /**
+     * 0x16 Cause String
+     */
     String cause;
-    /** 0x17 IAX Unknown 8-bit unsigned integer */
+    /**
+     * 0x17 IAX Unknown 8-bit unsigned integer
+     */
     Integer iaxunknown;
-    /** 0x18 Messages Waiting 16-bit unsigned integer */
+    /**
+     * 0x18 Messages Waiting 16-bit unsigned integer
+     */
     Integer msgCount;
-    /** 0x19 Request Auto-Answer */
-    Boolean autoAns;
-    /** 0x1a Request Music-on-Hold String (optional) */
+    /**
+     * 0x19 Request Auto-Answer
+     */
+    boolean autoAns;
+    /**
+     * 0x1a Request Music-on-Hold String (optional)
+     */
     String moh;
-    /** 0x1b Transfer Identifier 32-bit unsigned integer */
+    /**
+     * 0x1b Transfer Identifier 32-bit unsigned integer
+     */
     Integer transIndic;
-    /** 0x1c Referring DNIS String */
+    /**
+     * 0x1c Referring DNIS String
+     */
     String rdnis;
-    /** 0x1d Provisioning info raw */
+    /**
+     * 0x1d Provisioning info raw
+     */
     byte[] provisioning;
-    /** 0x1e AES Provisioning info raw */
+    /**
+     * 0x1e AES Provisioning info raw
+     */
     byte[] aesprovisioning;
-    /** 0x1f Date/Time u32 */
+    /**
+     * 0x1f Date/Time u32
+     */
     Integer datetime;
-    /** 0x20 Device Type - string */
+    /**
+     * 0x20 Device Type - string
+     */
     String devicetype;
-    /** 0x21 Service Identifier - string */
+    /**
+     * 0x21 Service Identifier - string
+     */
     String serviceident;
-    /** 0x22 Firmware revision - u16 */
+    /**
+     * 0x22 Firmware revision - u16
+     */
     Integer firmwarever;
-    /** 0x23 Firmware block description - u32 */
+    /**
+     * 0x23 Firmware block description - u32
+     */
     Integer fwblockdesc;
-    /** 0x24 Firmware block of data - raw */
+    /**
+     * 0x24 Firmware block of data - raw
+     */
     byte[] fwblockdata;
-    /** 0x25 Provisioning Version (u32) */
+    /**
+     * 0x25 Provisioning Version (u32)
+     */
     Integer provver;
-    /** 0x26 Calling presentation (u8) */
+    /**
+     * 0x26 Calling presentation (u8)
+     */
     Integer callingpres;
-    /** 0x27 Calling type of number (u8) */
+    /**
+     * 0x27 Calling type of number (u8)
+     */
     Integer callington;
-    /** 0x28 Calling transit network select (u16) */
+    /**
+     * 0x28 Calling transit network select (u16)
+     */
     Integer callingtns;
-    /** 0x29 Supported sampling rates (u16) */
+    /**
+     * 0x29 Supported sampling rates (u16)
+     */
     Integer samplingrate;
-    /** 0x2a Hangup cause (u8) */
+    /**
+     * 0x2a Hangup cause (u8)
+     */
     Integer causecode;
-    /** 0x2b Encryption format (u16) */
+    /**
+     * 0x2b Encryption format (u16)
+     */
     Integer encryption;
-    /** 0x2c 128-bit AES Encryption key (raw) */
+    /**
+     * 0x2c 128-bit AES Encryption key (raw)
+     */
     byte[] enckey;
-    /** 0x2d Codec Negotiation raw */
+    /**
+     * 0x2d Codec Negotiation raw
+     */
     byte[] codec_prefs;
-    /** 0x2e Received jitter (as in RFC1889) u32 */
+    /**
+     * 0x2e Received jitter (as in RFC1889) u32
+     */
     Integer rr_jitter;
-    /** 0x2f Received loss (high byte loss pct, low 24 bits loss count, as in rfc1889 u 32 */
+    /**
+     * 0x2f Received loss (high byte loss pct, low 24 bits loss count, as in rfc1889 u 32
+     */
     Integer rr_loss;
-    /** 0x30 Received frames (total frames received) u32 */
+    /**
+     * 0x30 Received frames (total frames received) u32
+     */
     Integer rr_pkts;
-    /** 0x31 Max playout delay for received frames (in ms) u16 */
+    /**
+     * 0x31 Max playout delay for received frames (in ms) u16
+     */
     Integer rr_delay;
-    /** 0x32 Dropped frames (presumably by jitterbuf) u32 */
+    /**
+     * 0x32 Dropped frames (presumably by jitterbuf) u32
+     */
     Integer rr_dropped;
-    /** 0x33 Frames received Out of Order u32 */
+    /**
+     * 0x33 Frames received Out of Order u32
+     */
     Integer rr_ooo;
-    
+
+    String calltoken;
+
     private Hashtable _iaxvars;
 
     ByteBuffer _buff;
     int _nelems = 0;
-
-
-
 
 
     /**
@@ -256,48 +445,50 @@ public class InfoElement {
     /**
      * Constructor for the outbound InfoElement object
      */
-    InfoElement() { }
+    InfoElement() {
+    }
 
 
-    public String [] listIaxVars(){
-        String [] ret;
-        if (this._iaxvars == null){
+    public String[] listIaxVars() {
+        String[] ret;
+        if (this._iaxvars == null) {
             ret = new String[0];
         } else {
-            synchronized(_iaxvars){
+            synchronized (_iaxvars) {
                 ret = new String[_iaxvars.size()];
                 Enumeration e = _iaxvars.keys();
-                int i= 0;
-                while (e.hasMoreElements()){
+                int i = 0;
+                while (e.hasMoreElements()) {
                     String k = (String) e.nextElement();
                     String v = (String) _iaxvars.get(k);
-                    ret[i++] = k+"="+v;
+                    ret[i++] = k + "=" + v;
                 }
             }
         }
         return ret;
     }
-    
-    String getIaxVarVal(String name){
+
+    String getIaxVarVal(String name) {
         String ret = null;
-        if ((name != null) && (_iaxvars != null)){
-            synchronized (_iaxvars){
+        if ((name != null) && (_iaxvars != null)) {
+            synchronized (_iaxvars) {
                 ret = (String) _iaxvars.get(name);
             }
         }
         return ret; //todo
     }
-    
-    void putIaxVar(String name, String value){
-        if (name != null){
+
+    void putIaxVar(String name, String value) {
+        if (name != null) {
             if (_iaxvars == null) {
                 _iaxvars = new Hashtable(5);
-                synchronized(_iaxvars){
-                    _iaxvars.put(name,value);
+                synchronized (_iaxvars) {
+                    _iaxvars.put(name, value);
                 }
             }
         }
     }
+
     /**
      * Returns the buffer as an array.
      *
@@ -312,10 +503,10 @@ public class InfoElement {
      * Parses the incoming IAX Control Frame, filling in this object.
      *
      * @param protocolControlFrame ProtocolControlFrame
-     * @exception IAX2ProtocolException Description of Exception
+     * @throws IAX2ProtocolException Description of Exception
      */
     public void parse(ProtocolControlFrame protocolControlFrame)
-        throws IAX2ProtocolException {
+            throws IAX2ProtocolException {
         while (_buff.hasRemaining()) {
             nextBit();
             _nelems++;
@@ -374,8 +565,7 @@ public class InfoElement {
         writeElemS(CAUSE, cause);
         writeElem8(IAXUNKNOWN, iaxunknown);
         writeElem16(MSGCOUNT, msgCount);
-        if (autoAns == Boolean.TRUE)
-        {
+        if (autoAns == true) {
             writeElem0(AUTOANS);
         }
         writeElemS(MOH, moh);
@@ -405,11 +595,11 @@ public class InfoElement {
         writeElem32(RR_DROPPED, rr_dropped);
         writeElem32(RR_OOO, rr_ooo);
         writeElemsVars();
+        writeElemS(CALLTOKEN, calltoken);
 
         // do something here to mark the end.
         // Birgit; is that really necessary?
     }
-
 
 
     /**
@@ -427,8 +617,7 @@ public class InfoElement {
         String ret = null;
         try {
             ret = new String(b, "UTF-8");
-        }
-        catch (java.io.UnsupportedEncodingException exc) {
+        } catch (java.io.UnsupportedEncodingException exc) {
             ret = new String(b);
         }
         return ret;
@@ -441,9 +630,9 @@ public class InfoElement {
         String s = readString();
         int i = s.indexOf("=");
         if (i > 0) {
-            String name = s.substring(1,i);
-            String val = s.substring(i+1);
-            putIaxVar(name,val);
+            String name = s.substring(1, i);
+            String val = s.substring(i + 1);
+            putIaxVar(name, val);
         }
     }
 
@@ -475,7 +664,7 @@ public class InfoElement {
             b = in.getBytes("UTF-8");
         }
         catch (java.io.UnsupportedEncodingException exc) { */
-            b = in.getBytes();
+        b = in.getBytes();
       /*  } */
         byte l = (byte) (0xff & b.length);
         _buff.put(l);
@@ -499,7 +688,7 @@ public class InfoElement {
      * Reads a 8 bit integer
      *
      * @return Description of the Returned Value
-     * @exception IAX2ProtocolException Description of Exception
+     * @throws IAX2ProtocolException Description of Exception
      */
     int read8() throws IAX2ProtocolException {
         byte l = _buff.get();
@@ -519,7 +708,7 @@ public class InfoElement {
      * Reads an empty IE.
      *
      * @return Description of the Returned Value
-     * @exception IAX2ProtocolException Description of Exception
+     * @throws IAX2ProtocolException Description of Exception
      */
     boolean read0() throws IAX2ProtocolException {
         byte l = _buff.get();
@@ -535,7 +724,7 @@ public class InfoElement {
      * Reads a 16 bit integer
      *
      * @return Description of the Returned Value
-     * @exception IAX2ProtocolException Description of Exception
+     * @throws IAX2ProtocolException Description of Exception
      */
     int read16() throws IAX2ProtocolException {
         byte l = _buff.get();
@@ -563,7 +752,7 @@ public class InfoElement {
      * Reads a 32 bit integer
      *
      * @return Description of the Returned Value
-     * @exception IAX2ProtocolException Description of Exception
+     * @throws IAX2ProtocolException Description of Exception
      */
     int read32() throws IAX2ProtocolException {
         byte l = _buff.get();
@@ -591,7 +780,7 @@ public class InfoElement {
      * Writes a info element with String data
      *
      * @param key Description of Parameter
-     * @param s Description of Parameter
+     * @param s   Description of Parameter
      */
     void writeElemS(int key, String s) {
         if (s != null) {
@@ -600,13 +789,14 @@ public class InfoElement {
             _nelems++;
         }
     }
+
     /**
      * writeElemsVars
      */
     void writeElemsVars() {
-        String [] l = listIaxVars();
-        for (int i = 0; i < l.length; i++){
-            writeElemS(this.IAXVARS,l[i]);
+        String[] l = listIaxVars();
+        for (int i = 0; i < l.length; i++) {
+            writeElemS(InfoElement.IAXVARS, l[i]);
         }
     }
 
@@ -615,7 +805,7 @@ public class InfoElement {
      * Writes a info element with a raw block of bytes
      *
      * @param key Description of Parameter
-     * @param b Description of Parameter
+     * @param b   Description of Parameter
      */
     void writeElemRaw(int key, byte[] b) {
         if (b != null) {
@@ -630,7 +820,7 @@ public class InfoElement {
      * Writes a info element with a 32 bit integer data
      *
      * @param key Description of Parameter
-     * @param i Description of Parameter
+     * @param i   Description of Parameter
      */
     void writeElem32(int key, Integer i) {
         if (i != null) {
@@ -645,7 +835,7 @@ public class InfoElement {
      * Writes a info element with a 16 bit integer data
      *
      * @param key Description of Parameter
-     * @param c Description of Parameter
+     * @param c   Description of Parameter
      */
     void writeElem16(int key, Integer c) {
         if (c != null) {
@@ -660,7 +850,7 @@ public class InfoElement {
      * Writes a info element with a 8 bit integer data
      *
      * @param key Description of Parameter
-     * @param b Description of Parameter
+     * @param b   Description of Parameter
      */
     void writeElem8(int key, Integer b) {
         if (b != null) {
@@ -687,7 +877,7 @@ public class InfoElement {
     /**
      * Gets the next IE and stores it in the appropriate variable.
      *
-     * @exception IAX2ProtocolException Description of Exception
+     * @throws IAX2ProtocolException Description of Exception
      */
     private void nextBit() throws IAX2ProtocolException {
 
@@ -716,24 +906,24 @@ public class InfoElement {
                 password = readString();
                 break;
             case CAPABILITY:
-                capability = new Integer(this.read32());
+                capability = Integer.valueOf(this.read32());
                 break;
             case FORMAT:
-                format = new Integer(read32());
+                format = Integer.valueOf(read32());
                 break;
             case LANGUAGE:
                 language = readString();
                 break;
             case VERSION:
-                version = new Integer(read16());
+                version = Integer.valueOf(read16());
                 break;
             case ADSICPE:
-                adsiCpe = new Integer(read16());
+                adsiCpe = Integer.valueOf(read16());
                 break;
             case DNID:
                 break;
             case AUTHMETHODS:
-                authmethods = new Integer(read16());
+                authmethods = Integer.valueOf(read16());
                 break;
             case CHALLENGE:
                 challenge = readString();
@@ -748,31 +938,31 @@ public class InfoElement {
                 aaa = readRaw();
                 break;
             case REFRESH:
-                refresh = new Integer(read16());
+                refresh = Integer.valueOf(read16());
                 break;
             case DPE:
-                dpe = new Integer(read16());
+                dpe = Integer.valueOf(read16());
                 break;
             case CALLNO:
-                callNo = new Integer(read16());
+                callNo = Integer.valueOf(read16());
                 break;
             case CAUSE:
                 cause = readString();
                 break;
             case IAXUNKNOWN:
-                iaxunknown = new Integer(_buff.get());
+                iaxunknown = Integer.valueOf(_buff.get());
                 break;
             case MSGCOUNT:
-                msgCount = new Integer(read16());
+                msgCount = Integer.valueOf(read16());
                 break;
             case AUTOANS:
-                autoAns = new Boolean(read0());
+                autoAns = read0();
                 break;
             case MOH:
                 moh = readString();
                 break;
             case TRANSINDIC:
-                transIndic = new Integer(read32());
+                transIndic = Integer.valueOf(read32());
                 break;
             case RDNIS:
                 rdnis = readString();
@@ -784,7 +974,7 @@ public class InfoElement {
                 aesprovisioning = readRaw();
                 break;
             case DATETIME:
-                datetime = new Integer(read32());
+                datetime = Integer.valueOf(read32());
                 break;
             case DEVICETYPE:
                 devicetype = readString();
@@ -794,34 +984,34 @@ public class InfoElement {
                 serviceident = readString();
                 break;
             case FIRMWAREVER:
-                firmwarever = new Integer(read16());
+                firmwarever = Integer.valueOf(read16());
                 break;
             case FWBLOCKDESC:
-                fwblockdesc = new Integer(read32());
+                fwblockdesc = Integer.valueOf(read32());
                 break;
             case FWBLOCKDATA:
                 fwblockdata = readRaw();
                 break;
             case PROVVER:
-                provver = new Integer(read32());
+                provver = Integer.valueOf(read32());
                 break;
             case CALLINGPRES:
-                callingpres = new Integer(read8());
+                callingpres = Integer.valueOf(read8());
                 break;
             case CALLINGTON:
-                callington = new Integer(read8());
+                callington = Integer.valueOf(read8());
                 break;
             case CALLINGTNS:
-                callingtns = new Integer(read16());
+                callingtns = Integer.valueOf(read16());
                 break;
             case SAMPLINGRATE:
-                samplingrate = new Integer(read16());
+                samplingrate = Integer.valueOf(read16());
                 break;
             case CAUSECODE:
-                causecode = new Integer(read8());
+                causecode = Integer.valueOf(read8());
                 break;
             case ENCRYPTION:
-                encryption = new Integer(read16());
+                encryption = Integer.valueOf(read16());
                 break;
             case ENCKEY:
                 enckey = readRaw();
@@ -830,25 +1020,28 @@ public class InfoElement {
                 codec_prefs = readRaw();
                 break;
             case RR_JITTER:
-                rr_jitter = new Integer(read32());
+                rr_jitter = Integer.valueOf(read32());
                 break;
             case RR_LOSS:
-                rr_loss = new Integer(read32());
+                rr_loss = Integer.valueOf(read32());
                 break;
             case RR_PKTS:
-                rr_pkts = new Integer(read32());
+                rr_pkts = Integer.valueOf(read32());
                 break;
             case RR_DELAY:
-                rr_delay = new Integer(read16());
+                rr_delay = Integer.valueOf(read16());
                 break;
             case RR_DROPPED:
-                rr_dropped = new Integer(read32());
+                rr_dropped = Integer.valueOf(read32());
                 break;
             case RR_OOO:
-                rr_ooo = new Integer(read32());
+                rr_ooo = Integer.valueOf(read32());
                 break;
             case IAXVARS:
                 readVar();
+                break;
+            case CALLTOKEN:
+                calltoken = readString();
                 break;
 
             default:
